# umbilical

./: .gitignore  Cargo.toml  PINOUT.md  README.md  flake.nix  runner.sh
.cargo/: config.toml
src/: deserialize.rs  ground_tm_defs.rs  io_threads.rs  ksz8863_phy_drv.rs  main.rs  timesync.rs
