[package]
name = "umbilical"
version = "0.1.0"
edition = "2024"
authors = [ "Eliseo Cailloux" ]

[dependencies]

embassy-stm32 = { version = "0.5.0", features = [ "defmt", "time", "time-driver-any", "stm32h723vg", "memory-x", "unstable-pac", "exti"]  }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-1_000_000"] }
embassy-net = { version = "0.8.0", features = ["defmt", "tcp", "udp", "dhcpv4"]  }
embassy-futures = { version = "0.1.2" }

embedded-io-async = { version = "0.7.0", features = ["defmt"] }

defmt = "1.0"
defmt-rtt = "1.1"
panic-probe = { version = "1.0", features = ["print-defmt"] }

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"

heapless = { version = "0.9", default-features = false }
static_cell = { version = "2.1.1", features = ["nightly"] }
ksz8863 = "0.2"
mdio = "0.1"

[profile.release]
debug = 2
